corrected typo re 'North America'

--- a/mddf-lib/src/com/movielabs/mddf/resources/ISO3166-1.properties
+++ b/mddf-lib/src/com/movielabs/mddf/resources/ISO3166-1.properties
@@ -252,7 +252,7 @@ ZM=ZAMBIA
 ZW=ZIMBABWE
 001=World
 002=Africa
-003	2010-08-16	North America
+003=North America
 005=South America
 009=Oceania
 011=Western Africa
